great-idea-website/css/index.css
/* http://meyerweb.com/eric/tools/css/reset/ 
   v2.0 | 20110126
   License: none (public domain)
*/

html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed, 
figure, figcaption, footer, header, hgroup, 
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
	margin: 0;
	padding: 0;
	border: 0;
	font-size: 100%;
	font: inherit;
	vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure, 
footer, header, hgroup, menu, nav, section {
	display: block;
}
body {
	line-height: 1;
}
ol, ul {
	list-style: none;
}
blockquote, q {
	quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
	content: '';
	content: none;
}
table {
	border-collapse: collapse;
	border-spacing: 0;
}

/* Set every element's box-sizing to border-box */
* {
    box-sizing: border-box;
}

html, body {
    height: 100%;
    font-family: 'Titillium Web', sans-serif;
}

h1, h2, h3, h4, h5 {
    font-family: 'Bangers', cursive;
    letter-spacing: 1px;
    margin-bottom: 15px;
}

/* Your code starts here! */

/* variables */
:root {
	--page-width: 900px;
	--gray: #BEBEBE;
}

/* grid setup */
.row {
	display: block;
	margin: 2.5em 0;
	white-space: nowrap;
}

[class ^= "col-"], [class *= "col-"] {
	display: inline-block;
	padding: 0 0.5em;
	vertical-align: top;
	white-space: normal;
}

[class ^= "col-"]:first-child, [class *= "col-"]:first-child {
	padding-left: 0;
}

[class ^= "col-"]:last-child, [class *= "col-"]:last-child {
	padding-right: 0;
}

.col-full {
	width: 100%;
}

.col-half {
	width: calc(100% / 2);
}

.col-third {
	width: calc(100% / 3);
}

/* actual styling begins */

body {
	margin: auto;
	padding: 0 0.5em;
	max-width: var(--page-width);
}

main {
	border-top: solid 1px black;
	border-bottom: solid 1px black;
}

h1 {
	font-size: 4.5em;
	padding-bottom: 10px;
}

a.button {
	border: solid 1px black;
	color: black;
	padding: 0.25em 2.5em;
	text-decoration: none;
}

a.button:hover {
	color: white;
	background: var(--gray);
}

/* navigation */

nav {
	text-align: center;
}

nav a {
	color: var(--gray);
	margin-right: 3.5em;
	text-decoration: none;
}

nav a, nav img {
	vertical-align: middle;
}

nav a:hover {
	color: black;
	text-decoration: underline;
}

/* banner */

#banner {
	text-align: center;
}

#banner.row {
	margin: 4.5em 0;
}

#banner section {
	vertical-align: middle;
}

/* footer */

#footer-copyright {
	text-align: center;
}

